--- a/index.html
+++ b/index.html
@@ -73,21 +73,21 @@
     <div class="modal" id="helpModal">
         <div class="modal-content">
             <div class="modal-title" data-i18n="howtoplay">How to Play</div>
-            <p class="modal-text" data-i18n="rule1">Guess the secret code with unique digits.</p>
+            <p class="modal-text" data-i18n="rule1">Guess the secret code with unique numbers.</p>
             <p class="modal-text" data-i18n="rule2">After each guess, the color shows how close you are:</p>
             
             <div class="legend">
                 <div class="legend-item">
                     <div class="legend-box" style="background: #10b981;">5</div>
-                    <span data-i18n="correct">Correct digit, correct position</span>
+                    <span data-i18n="correct">Correct number, correct position</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-box" style="background: #f59e0b;">3</div>
-                    <span data-i18n="present">Correct digit, wrong position</span>
+                    <span data-i18n="present">Correct number, wrong position</span>
                 </div>
                 <div class="legend-item">
                     <div class="legend-box" style="background: #6b7280;">7</div>
-                    <span data-i18n="absent">Digit not in code</span>
+                    <span data-i18n="absent">Number not in code</span>
                 </div>
             </div>
             <button class="modal-close top-right" id="closeHelp" aria-label="Close">✕</button>
