--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
             <div class="input-area">
                 <input type="text" class="code-input" id="codeInput" maxlength="3" data-i18n-placeholder="entercode">
-                <button class="submit-btn" id="submitBtn" data-i18n="submit">
-                    <img src="img/submit.png" alt="Submit">
-                </button>
+<button class="submit-btn" id="submitBtn">
+    <img src="img/submit.png" alt="Submit">
+</button>
             </div>
 
             <div class="guesses" id="guessesContainer"></div>
