--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <div class="floating-content" id="floatingContent"></div>
 </div>
 
-<script src="script.js"> </script>
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
