--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 
             <div class="input-area">
-                <input type="text" class="code-input" id="codeInput" maxlength="3" data-i18n-placeholder="entercode">
+                <input type="text" class="code-input" id="codeInput" data-i18n-placeholder="entercode">
                 <button class="submit-btn" id="submitBtn">
                     <img src="img/submit.png" alt="Submit">
                 </button>
@@ -188,6 +188,9 @@
         </div>
         <div class="keyboard-row">
             <button class="keyboard-key keyboard-zero">0</button>
+                <button class="keyboard-key keyboard-backspace" id="keyboardBackspace">
+                <img src="img/backspace.png" alt="Backspace">
+            </button>
         </div>
     </div>
 </div>
