--- a/index.html
+++ b/index.html
@@ -47,19 +47,25 @@
 
         <div class="features">
             <div class="feature-card">
-                <span class="feature-icon">🎯</span>
+                <span class="feature-icon">
+                    <img src="img/difficult.png">
+                </span>
                 <h3 class="feature-title" id="feature1Title">Progressive Difficulty</h3>
                 <p class="feature-desc" id="feature1Desc">Choose from 3 to 6 digits with Easy, Medium, or Hard modes to match your skill level</p>
             </div>
 
             <div class="feature-card">
-                <span class="feature-icon">⚡</span>
+                <span class="feature-icon">
+                    <img src="img/feedback.png">
+                </span>
                 <h3 class="feature-title" id="feature2Title">Instant Feedback</h3>
                 <p class="feature-desc" id="feature2Desc">Color-coded hints guide you closer to the solution with every guess</p>
             </div>
 
             <div class="feature-card">
-                <span class="feature-icon">🎮</span>
+                <span class="feature-icon">
+                    <img src="img/interface.png">
+                </span>
                 <h3 class="feature-title" id="feature4Title">Clean Interface</h3>
                 <p class="feature-desc" id="feature4Desc">Distraction-free design with smooth animations and intuitive controls</p>
             </div>
