--- a/play.html
+++ b/play.html
@@ -129,6 +129,25 @@
                     <span data-i18n="absent">Number not in code</span>
                 </div>
             </div>
+
+            <p class="modal-text" data-i18n="statsinfo" style="margin-top: 16px; font-size: 14px; color: #718096;">The numbers shown in the middle are discovered numbers from the code, but their position in the stats bar does NOT indicate their position in the secret code</p>
+            <div class="stats-example">
+                <div class="stat-example-item">
+                    <div class="stat-example-value">4</div>
+                    <div class="stat-example-label" data-i18n="attempts">Attempts</div>
+                </div>
+                
+                <div class="discovered-numbers-example">
+                    <div class="discovered-cell-example found">6</div>
+                    <div class="discovered-cell-example present">8</div>
+                    <div class="discovered-cell-example empty">?</div>
+                </div>
+                
+                <div class="stat-example-item">
+                    <div class="stat-example-value">6</div>
+                    <div class="stat-example-label" data-i18n="maxattempts">Max</div>
+                </div>
+            </div>
             <button class="modal-close top-right" id="closeHelp" aria-label="Close">✕</button>
         </div>
     </div>
