Reorganized the files into folders

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeGuess - Master The Art of Deduction</title>
     <link rel="icon" type="image" href="img/logo.png">
-    <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="styles/landing.css">
 </head>
 <body>
     <div class="gradient-bg"></div>
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-<script src="landing.js"> </script>
+<script src="src/landing.js"> </script>
 
 </body>
 </html>
