--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Guess</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" type="image" href="img/logo.png">
 </head>
 <body>
@@ -201,6 +201,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
-<script src="script.js"></script>
+<script src="src/script.js"></script>
 </body>
 </html>
