Changed the updateDiscoveredNumbers function to display the last code input

--- a/play.html
+++ b/play.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <p class="modal-text" data-i18n="statsinfo" style="margin-top: 16px; font-size: 14px; color: #718096;">The numbers shown in the middle are discovered numbers from the code, but their position in the stats bar does NOT indicate their position in the secret code</p>
+            <p class="modal-text" data-i18n="statsinfo" style="margin-top: 16px; font-size: 14px; color: #718096;">The numbers displayed in the middle (stats bar) represent the numbers written in the last code input.</p>
             <div class="stats-example">
                 <div class="stat-example-item">
                     <div class="stat-example-value">4</div>
